crates/biome_html_parser/tests/html_specs/ok/svelte/if_else.svelte
<!-- if / else -->
{#if porridge.temperature > 100}
	<p>too hot!</p>
{:else}
	<p>too cold!</p>
{/if}
