crates/biome_html_parser/tests/html_specs/error/svelte/if_else_if_missing_expression.svelte
{#if condition}
	<span>fine</span>
{:else if}
	<span>not fine :(</span>
{/if}

{#if condition}
	<span>fine</span>
{:else if }
	<span>still not fine :(</span>
{/if}
